--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
         max-width: 1440px;
         margin:0 auto;
     }
+    .input-field {
+        @apply border border-gray-300 focus:border-primary focus:ring focus:ring-primary focus:outline-none px-4 py-2 rounded-full
+      }
 
     .shoe-background{
         @apply bg-[url('./assets/images/thumbnail-background.svg')] bg-cover bg-center
@@ -29,7 +32,11 @@
         @apply text-lg text-gray-500 font-poppins
     }
 
+    
+
     .subtitle{
         @apply text-xl text-gray-500 font-poppins
     }
+
+    
 }
